<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_bkLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNormal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/id_txtAclThresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/AcclThresh"
        app:layout_constraintBottom_toTopOf="@+id/id_SeekBarAccelThresh"
        app:layout_constraintEnd_toEndOf="@+id/id_SeekBarAccelThresh" />

    <TextView
        android:id="@+id/id_txtACCL_X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/axisX"
        app:layout_constraintBottom_toTopOf="@+id/id_txtACCL_Y"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_txtACCL_Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/axisY"
        app:layout_constraintBottom_toTopOf="@+id/id_txtACCL_Z"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/id_txtACCL_Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="96dp"
        android:text="@string/axisZ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/id_SeekBarAccelThresh"
        android:layout_width="265dp"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/id_txtACCL_X"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/id_btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickCloseApp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/id_txtCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/id_txtSum"
        app:layout_constraintStart_toEndOf="@+id/id_txtSum" />

    <TextView
        android:id="@+id/id_txtSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/id_SeekBarAccelThresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>